# VSCode-Android-ELF-Template

./: CMakeLists.txt  CMakePresets.json  README.md
tools/: deploy.ps1
